--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,24 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.351
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Avoid a processor hang when disambiguate="true"
+  and disambiguate-add-year-suffix="true" are both
+  set by the style.
+
+- Amend processor license terms to require CSL attribution
+  in a website used to distribute an application that
+  makes use of citeproc-js as well, as in the application
+  itself.
+
+
+==========================
 Changes in version 1.0.350
 ==========================
 
