--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,18 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.366
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Avoid a possible error when attempting to process
+  multilingual citations with bad parameters.
+
+
+==========================
 Changes in version 1.0.365
 ==========================
 
