--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,19 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.375
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Adjust parallel cite pointers on delete. This is
+  not perfectly automatic; document may need an explicit
+  refresh to produce correct formatting after delete.
+
+
+==========================
 Changes in version 1.0.374
 ==========================
 
