--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,20 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.389
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Correctly handle locales that have no ungendered term
+  defaults.
+
+- Implement limit-day-ordinals-to-day-1.
+
+
+==========================
 Changes in version 1.0.388
 ==========================
 
