--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.395
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Provide for applying arbitrary wrappers around
+  cites. Function has access to unique item ID supplied
+  by calling application.
+
+==========================
 Changes in version 1.0.394
 ==========================
 
