--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,16 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.406
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Allow italics on numeric strings.
+
+==========================
 Changes in version 1.0.405
 ==========================
 
@@ -9,7 +19,8 @@ Changes in version 1.0.405
 Mishandled or unimplemented features
 ------------------------------------
 
-- Never apply initials to given names that begin with a non-romanesque character.
+- Do not apply initials to given names that begin with a non-romanesque character
+  unless the initials template contains "%s".
 
 - Fix bug that prevented pluralisation of terms set by a single leading in-field
   label abbreviation, with thanks to Ty Vichet for reporting the fault.
