--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,17 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.409
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix fatal bug in the handling of labels in cs:names
+  nodes called via macro from cs:substitute.
+
+==========================
 Changes in version 1.0.408
 ==========================
 
