--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,21 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.412
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix breakage of short-form titles when option
+  main_title_from_short_title is enabled.
+
+- Implement virtual variables title-main and title-sub,
+  controlled by main_title_from_short_title processor
+  option.
+
+==========================
 Changes in version 1.0.411
 ==========================
 
