--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,16 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.414
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Use lang tag on headline field if available.
+
+==========================
 Changes in version 1.0.413
 ==========================
 
