--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,16 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.419
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Small refinement to short-forming of legal type titles.
+
+==========================
 Changes in version 1.0.418
 ==========================
 
