--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,16 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.426
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Squash a.sortkeys undefined bug for good.
+
+==========================
 Changes in version 1.0.425
 ==========================
 
