--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,17 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.428
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Replace another array reference to a string object
+  with slice.
+
+==========================
 Changes in version 1.0.427
 ==========================
 
