--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,18 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.429
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix a fatal bug triggered by a single quote
+  surrounded by spaces, when wrapped in double
+  quotes by the style.
+
+==========================
 Changes in version 1.0.428
 ==========================
 
