--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,18 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.431
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Fix delimiters on repeat references to the same
+  item. Many thanks to Aurimas Vinckevicius for the
+  fault report.
+
+==========================
 Changes in version 1.0.430
 ==========================
 
